# code-manager

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: build-deb.py  build-win.py  build_utils.py
src/code_manager/: __init__.py  __main__.py
src/code_manager/application/: __init__.py  config_service.py
src/code_manager/domain/: __init__.py  models.py  repo_parser.py
src/code_manager/infrastructure/: __init__.py  autostart.py  config_store.py  git_service.py  system_yaml.py
src/code_manager/presentation/: __init__.py  app_controller.py  app_icon.py  child_window.py  dialogs.py  group_config_window.py  main_window.py  repository_config_window.py  repository_status_view.py  single_instance.py  system_detail_window.py  table_hover.py  terminal_launcher.py  tray_manager.py  window_manager.py  window_utils.py  workers.py
tests/: test_app_controller.py  test_app_icon.py  test_application_service.py  test_autostart.py  test_build_deb_script.py  test_build_utils.py  test_build_win_script.py  test_config_store.py  test_dialogs.py  test_git_service.py  test_group_config_window.py  test_main_window.py  test_models.py  test_presentation_imports.py  test_repo_parser.py  test_repository_config_window.py  test_repository_status_view.py  test_single_instance.py  test_system_detail_window.py  test_system_yaml.py
